--- a/views/parciales/navbar.hbs
+++ b/views/parciales/navbar.hbs
@@ -24,7 +24,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Desactivado</a>
+                <a class="nav-link disabled" href="#">Construcción</a>
             </li>
         </ul>
         <!--<form class="form-inline my-2 my-lg-0">
